@@ -1,3 +1,4 @@
+Center icon/text within functions
 # 0.00.01 (66490) Aug 1, 2012
 Added new prototype for build a function
 Finished prototype for function creation
